...

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_tutorial"
        android:layout_marginTop="@dimen/card_vertical_margin"
        android:layout_marginLeft="@dimen/card_horizontal_margin"
        android:layout_marginRight="@dimen/card_horizontal_margin"
...

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_multi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_vertical_margin"
        android:layout_marginBottom="@dimen/card_vertical_margin"
        android:layout_marginLeft="@dimen/card_horizontal_margin"
        android:layout_marginRight="@dimen/card_horizontal_margin"
...
